[gd_scene load_steps=2 format=3 uid="uid://mope8nr7kcqq"]

[ext_resource type="Script" path="res://scripts/camera.gd" id="1_hafys"]

[node name="Camera" type="Camera2D"]
script = ExtResource("1_hafys")

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="FrequencyTimer" type="Timer" parent="."]

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="FrequencyTimer" to="." method="_on_frequency_timer_timeout"]
